--- a/steering_wheel_2022.ioc
+++ b/steering_wheel_2022.ioc
@@ -6,10 +6,13 @@ ADC.IPParameters=ContinuousConvMode,Resolution,DMAContinuousRequests,EOCSelectio
 ADC.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC.Resolution=ADC_RESOLUTION_8B
 ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
-CAN.CalculateBaudRate=166666
-CAN.CalculateTimeBit=6000
-CAN.CalculateTimeQuantum=2000.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+CAN.BS1=CAN_BS1_13TQ
+CAN.BS2=CAN_BS2_2TQ
+CAN.CalculateBaudRate=250000
+CAN.CalculateTimeBit=4000
+CAN.CalculateTimeQuantum=250.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
+CAN.Prescaler=2
 Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC.0.Instance=DMA1_Channel1
 Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -33,7 +36,8 @@ Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP7=TIM14
+Mcu.IPNb=8
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
@@ -45,6 +49,7 @@ Mcu.Pin13=PA12
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
 Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -53,19 +58,20 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
+NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
+NVIC.SVC_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=button_1
 PA0.Locked=true
@@ -149,7 +155,12 @@ RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
+TIM14.IPParameters=Prescaler,Period
+TIM14.Period=3000-1
+TIM14.Prescaler=400-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
 isbadioc=false
