--- a/steering_wheel_2022.ioc
+++ b/steering_wheel_2022.ioc
@@ -6,13 +6,15 @@ ADC.IPParameters=ContinuousConvMode,Resolution,DMAContinuousRequests,EOCSelectio
 ADC.Overrun=ADC_OVR_DATA_OVERWRITTEN
 ADC.Resolution=ADC_RESOLUTION_8B
 ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
-CAN.BS1=CAN_BS1_13TQ
-CAN.BS2=CAN_BS2_2TQ
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
+CAN.BS1=CAN_BS1_10TQ
 CAN.CalculateBaudRate=250000
 CAN.CalculateTimeBit=4000
-CAN.CalculateTimeQuantum=250.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2
-CAN.Prescaler=2
+CAN.CalculateTimeQuantum=333.3333333333333
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1
+CAN.Prescaler=16
 Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC.0.Instance=DMA1_Channel1
 Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -62,15 +64,15 @@ Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
-MxCube.Version=6.5.0
-MxDb.Version=DB.6.0.50
+MxCube.Version=6.9.1
+MxDb.Version=DB.6.0.91
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=button_1
@@ -128,7 +130,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F042K6Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.3
+ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -141,23 +143,36 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=steering_wheel_2022.ioc
 ProjectManager.ProjectName=steering_wheel_2022
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_CAN_Init-CAN-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
 RCC.CECFreq_Value=32786.88524590164
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=48000000
 RCC.HSICECFreq_Value=32786.88524590164
-RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value,VCOOutput2Freq_Value
+RCC.I2SFreq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
-RCC.TimSysFreq_Value=8000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
+RCC.TimSysFreq_Value=48000000
+RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 TIM14.IPParameters=Prescaler,Period
-TIM14.Period=3000-1
-TIM14.Prescaler=400-1
+TIM14.Period=65535
+TIM14.Prescaler=73
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
